# firefox-DNS-rebinding-attack

./: README.md  ad-server.dockerfile  docker-compose.yml  internal-service.dockerfile  startdns.sh
ad-server/: .#handlers.go  go.mod  index.go  main.go
ad-server/js/: someadscript.js
dns/: Cargo.toml
dns/src/: dns.rs  main.rs
internal-service/: index.html
