[package]
name = "untitled"
version = "0.1.0"
authors = ["Alexander Meinhardt Scheurer <alexandermscheurer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
packed_struct = "0.3"
packed_struct_codegen = "0.3"
